モデル単体テスト及びエラーメッセージの修正

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -8,6 +8,31 @@ ja:
        last_name: お名前(姓)
        first_name_kana: お名前カナ(名)
        last_name_kana: お名前カナ(姓)
-     tweet:
-       text: テキスト
+     item:
+       name: 商品名
+       description: 商品の説明
+       category: カテゴリー
+       category_id: カテゴリー
+       condition: 商品の状態
+       condition_id: 商品の状態
+       postage: 配送料の負担
+       postage_id: 配送料の負担
+       prefecture: 発送元の地域
+       prefecture_id: 発送元の地域
+       set_up_time: 発送までの日数
+       set_up_time_id: 発送までの日数
+       price: 価格
        image: 画像
+ activemodel:
+   attributes:
+     delivery_order:
+       postcode: 郵便番号
+       prefecture: 都道府県
+       prefecture_id: 都道府県
+       city: 市区町村
+       block: 番地
+       building: 建物名
+       phone_number: 電話番号
+       
+
+
